Fix possible package name conflict

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include *.py *.cfg LICENSE *.md requirements.txt
-include-recursive inaSpeechSegmenter/*.py
+include-recursive inaSpeechSegmenter_api_models/*.py
